Fixed alignement of avatars

--- a/CSS/homeStyle.css
+++ b/CSS/homeStyle.css
@@ -477,7 +477,7 @@ header nav button {
   color: var(--primaryW);
 }
 
-.home_section3__svg1 {
+.home_section3__svg1 img{
   width: 147px;
   height: 100px;
 }
@@ -608,11 +608,11 @@ header nav button {
   }
 
   .home_section3__card .job_title {
-    margin-bottom: 43px;
+    margin-bottom: 32px;
   }
 
   .home_section3__svg2 {
-    padding-top: 40px;
+    padding-top: 51px;
   }
 }
 
